# project-watertemp

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile-dev  Makefile  README.md  dbt_project.yml  dev.Dockerfile  docker-compose.yml  heroku.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/workflows/: workflow.yml
Docker/: Dockerfile  Dockerfile-dev
dbt/: profiles.yml
dbt/analysis/: post_hook.sql  pre_hook.sql  testing-null-depth-cm-values.sql
dbt/models/: sources.yml  tests.yml  water_temp_unique.sql  water_temp_weekly_avg.sql
dbt/models/ops/: table_stats.sql  tests.yml
dbt/models/prod/: tests.yml
src/: main.py
src/analysis/: database_limit_analysis.ipynb
src/dashboard/: app.py
src/dev/: query_local_tables.py  truncate_db.py
src/functions/: db.py  table_stats_plot.py  temp_access_pg_db.py
tests/: test_main.py  test_scraping.py
